--- a/course.html
+++ b/course.html
@@ -14,25 +14,64 @@
     
         <div id="pathways" class="flow" style="z-index:100;left:130px;background-color:grey;display:block;">
             <p style="font-size:20px;text-align:center;color:black;">Course 1</p>
-            <button class="flow-button">Minds and Machines</button>
-            <button class="flow-button">AI and Society</button>
-            <button class="flow-button">Are Humans Rational?</button>
+            <button id="c1.1" class="flow-button" onclick="c1Select()">Minds and Machines</button>
+            <button id="c1.2" class="flow-button" onclick="c2Select()">AI and Society</button>
+            <button id="c1.3" class="flow-button" onclick="c3Select()">Are Humans Rational?</button>
         </div>
         <div id="pathways" class="flow" style="left:415px;background-color:aquamarine;display:block;">
             <p style="font-size:20px;text-align:center;color:black;">Course 2</p>
-            <button class="flow-button">Introduction to Cognitive Science</button>
+            <button id="c2" class="flow-button" onclick="smallest()">Introduction to Cognitive Science</button>
         </div>
         <div id="pathways" class="half flow" style="left:700px;background-color:maroon;display:block;">
             <p style="font-size:20px;text-align:center;color:black;">Course 3</p>
-            <button class="fb2 flow-button">Game AI</button>
-            <button class="fb2 flow-button">Learning and Advanced Game AI</button>
-            <button class="fb2 flow-button">Programming for Cog Sci and AI</button>
-            <button class="fb2 flow-button">Artificial Intelligent Agents</button>
-            <button class="fb2 flow-button">Cognitive Modeling</button>
-            <button class="fb2 flow-button">Intelligent Virtual Agents</button>
-            <button class="fb2 flow-button">Ethics of AI</button>
-            <button class="fb2 flow-button">Language Endowed Intelligent Agents</button>
+            <button id="c3" class="fb2 flow-button">Game AI</button>
+            <button id="c3" class="fb2 flow-button">Learning and Advanced Game AI</button>
+            <button id="c3" class="fb2 flow-button">Programming for Cog Sci and AI</button>
+            <button id="c3" class="fb2 flow-button">Artificial Intelligent Agents</button>
+            <button id="c3" class="fb2 flow-button">Cognitive Modeling</button>
+            <button id="c3" class="fb2 flow-button">Intelligent Virtual Agents</button>
+            <button id="c3" class="fb2 flow-button">Ethics of AI</button>
+            <button id="c3" class="fb2 flow-button">Language Endowed Intelligent Agents</button>
         </div>
-    
-    </body>
-    </html>
+
+<script>
+function c1Select(){
+    var c1 = document.getElementById("c1.1");
+    var c2 = document.getElementById("c1.2");
+    var c3 = document.getElementById("c1.3");
+    if(c1.onclick){
+        c1.style.backgroundColor = "rgb(190, 90, 185)";
+        c2.style.backgroundColor = "rgb(73, 145, 145)";
+        c3.style.backgroundColor = "rgb(73, 145, 145)";
+    }
+}
+function c2Select(){
+    var c1 = document.getElementById("c1.1");
+    var c2 = document.getElementById("c1.2");
+    var c3 = document.getElementById("c1.3");
+    if(c2.onclick){
+        c2.style.backgroundColor = "rgb(190, 90, 185)";
+        c1.style.backgroundColor = "rgb(73, 145, 145)";
+        c3.style.backgroundColor = "rgb(73, 145, 145)";
+    }
+}
+function c3Select(){
+    var c1 = document.getElementById("c1.1");
+    var c2 = document.getElementById("c1.2");
+    var c3 = document.getElementById("c1.3");
+    if(c3.onclick){
+        c3.style.backgroundColor = "rgb(190, 90, 185)";
+        c1.style.backgroundColor = "rgb(73, 145, 145)";
+        c2.style.backgroundColor = "rgb(73, 145, 145)";
+    }
+}
+function smallest(){
+    var c1 = document.getElementById("c2");
+    if(c1.onclick){
+        c1.style.backgroundColor = "rgb(190, 90, 185)";
+    }
+}
+</script>
+
+</body>
+</html>
